# MirAIge

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  users.example.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
deploy/: cloud-init.example.yaml  install.sh
deploy/proxy/: Caddyfile  caddy.yml  inline.yml  nginx.conf  nginx.yml  traefik.yml
docs/guide/: README.md  api.md  architecture.md  configuration.md  development.md  glossary.md  mechanisms.md  operations.md  supply-chain.md  troubleshooting.md  usage.md
miraige_cli/: __init__.py  cli.py
services/api/: Dockerfile  __init__.py  attacks.py  auth.py  main.py  ratelimit.py  requirements.txt
services/attack_simulator/: agent_brain.py  attack.py  attack_state.py  scenarios.py  stealth_profiles.py  target_profiler.py
services/fake_portal/: Dockerfile  decoy.py  main.py  (+1 more)
tests/: conftest.py  test_api_ratelimit.py  test_api_rbac.py  test_api_users.py  test_attack_simulator.py  test_bff_api.py  test_cli.py  test_fake_portal.py  test_ghost_shell.py  test_helm_chart.py  test_lb_adapter_contract.py  test_mcp_server.py  test_metrics.py  test_orchestrator.py  test_orchestrator_store.py  test_sentinel.py  test_shared.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+101 files in other folders)
